--- a/Storytime/Storytime/View/Storyboards/HomePage.storyboard
+++ b/Storytime/Storytime/View/Storyboards/HomePage.storyboard
@@ -12,6 +12,9 @@
         <array key="Mithella-Bold.otf">
             <string>Mithella-Bold</string>
         </array>
+        <array key="Mithella-Regular.otf">
+            <string>Mithella-Regular</string>
+        </array>
     </customFonts>
     <scenes>
         <!--Profile-->
@@ -228,8 +231,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="373" height="306"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="iRl-JU-fuM">
-                                                    <rect key="frame" x="8" y="8" width="357" height="169"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="iRl-JU-fuM">
+                                                    <rect key="frame" x="8" y="8" width="357" height="186"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="An Old Man Lived in the Village" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d77-yn-QNV">
                                                             <rect key="frame" x="0.0" y="0.0" width="357" height="17"/>
@@ -237,8 +240,14 @@
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="052-tG-df1">
+                                                            <rect key="frame" x="0.0" y="19" width="357" height="15"/>
+                                                            <fontDescription key="fontDescription" name="Mithella-Regular" family="Mithella" pointSize="15"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="stockphotoforstorytime" translatesAutoresizingMaskIntoConstraints="NO" id="lJV-tw-5S2">
-                                                            <rect key="frame" x="0.0" y="19" width="357" height="150"/>
+                                                            <rect key="frame" x="0.0" y="36" width="357" height="150"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="150" id="s0I-xS-I4j"/>
                                                             </constraints>
@@ -248,33 +257,45 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="211" translatesAutoresizingMaskIntoConstraints="NO" id="nNa-RK-c4b">
                                                     <rect key="frame" x="8" y="262" width="357" height="22"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="HPg-jo-o8i">
-                                                            <rect key="frame" x="0.0" y="0.0" width="125.5" height="22"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="HPg-jo-o8i">
+                                                            <rect key="frame" x="0.0" y="0.0" width="125" height="22"/>
                                                             <subviews>
-                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="4qI-CH-6nB">
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="4qI-CH-6nB">
                                                                     <rect key="frame" x="0.0" y="-0.5" width="21.5" height="22"/>
                                                                     <color key="tintColor" red="0.83897095919999998" green="0.216673106" blue="0.1220556423" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="21.5" id="hTw-NB-GBt"/>
+                                                                    </constraints>
                                                                 </imageView>
-                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Yno-xd-bNJ">
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Yno-xd-bNJ">
                                                                     <rect key="frame" x="25.5" y="-0.5" width="22" height="22"/>
                                                                     <color key="tintColor" red="0.83897095919999998" green="0.216673106" blue="0.1220556423" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="22" id="cJz-pH-gyi"/>
+                                                                    </constraints>
                                                                 </imageView>
-                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="T0Q-Rc-cXV">
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="T0Q-Rc-cXV">
                                                                     <rect key="frame" x="51.5" y="-0.5" width="22" height="22"/>
                                                                     <color key="tintColor" red="0.83897095919999998" green="0.216673106" blue="0.1220556423" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 </imageView>
-                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ngo-51-V5w">
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ngo-51-V5w">
                                                                     <rect key="frame" x="77.5" y="-0.5" width="22" height="22"/>
                                                                     <color key="tintColor" red="0.83897095919999998" green="0.216673106" blue="0.1220556423" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="22" id="qZF-EM-6Pb"/>
+                                                                    </constraints>
                                                                 </imageView>
-                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Utb-wN-5H9">
-                                                                    <rect key="frame" x="103.5" y="-0.5" width="22" height="22"/>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Utb-wN-5H9">
+                                                                    <rect key="frame" x="103.5" y="-0.5" width="21.5" height="22"/>
                                                                     <color key="tintColor" red="0.83897095919999998" green="0.216673106" blue="0.1220556423" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 </imageView>
                                                             </subviews>
+                                                            <constraints>
+                                                                <constraint firstItem="T0Q-Rc-cXV" firstAttribute="centerX" secondItem="HPg-jo-o8i" secondAttribute="centerX" id="ECw-nj-fHJ"/>
+                                                            </constraints>
                                                         </stackView>
-                                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zXT-r0-2c2">
-                                                            <rect key="frame" x="336.5" y="0.0" width="20.5" height="22"/>
+                                                        <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zXT-r0-2c2">
+                                                            <rect key="frame" x="336" y="0.0" width="21" height="22"/>
                                                             <color key="tintColor" red="0.84818177139999995" green="0.088552076760000001" blue="0.152159356" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <state key="normal" image="heart" catalog="system"/>
                                                         </button>
@@ -285,6 +306,7 @@
                                                 </stackView>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="iRl-JU-fuM" firstAttribute="top" secondItem="fdr-Kq-aFJ" secondAttribute="topMargin" id="6RB-3h-CRB"/>
                                                 <constraint firstItem="nNa-RK-c4b" firstAttribute="leading" secondItem="fdr-Kq-aFJ" secondAttribute="leading" constant="8" id="Dhf-GT-6mq"/>
                                                 <constraint firstItem="iRl-JU-fuM" firstAttribute="leading" secondItem="fdr-Kq-aFJ" secondAttribute="leading" constant="8" id="NiU-0X-1oh"/>
                                                 <constraint firstAttribute="trailing" secondItem="iRl-JU-fuM" secondAttribute="trailing" constant="8" id="NxE-sz-WXJ"/>
@@ -294,6 +316,7 @@
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="373" height="306"/>
                                         <connections>
+                                            <outlet property="storyBodyPreview" destination="052-tG-df1" id="GIM-Md-nmm"/>
                                             <outlet property="storyImageView" destination="lJV-tw-5S2" id="JNZ-uU-bWQ"/>
                                             <outlet property="storyTitleLabel" destination="d77-yn-QNV" id="rtf-4i-pL4"/>
                                         </connections>
